[build-system]
requires = ["setuptools", "wheel", "poetry"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "lib_remla19"
version = "0.0.10"
description = "version aware lib for REMLA2023 (team 19)"
authors = ["hansd99 <hans.dekker99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "^58.0.0"
wheel = "^0.37.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.metadata]
license = "MIT"
long_description = """

[project]
name = "lib_remla19"
version = "0.0.5"
authors = [
  { name="hansd99", email="hans.dekker99@gmail.com" },
]
description = "version aware lib for REMLA2023 (team 19)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/remla23-team19/lib"
"Bug Tracker" = "https://github.com/remla23-team19/lib/issues"
